--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@ Melissa's Practice
     <li>JS</li>
 
   </ul>
+  
+  <img src>="http://geology.com/state-map/maps/minnesota-county-map.gif"</img>
 
 </body>
 
