--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-< html>
+<html>
 
 <head>
 
@@ -8,9 +8,9 @@ Melissa's Practice
 </head>
 
 <body>
-
+  <header>
   <h1>Melissa Dangaran</h1>
-
+  </header>
   <button>Click here</button>
 
   <p>Melissa is a WebMD</p>
@@ -29,8 +29,10 @@ Melissa's Practice
 
   </ul>
   
-  <img src>="http://geology.com/state-map/maps/minnesota-county-map.gif"</img>
-
+  <img src="http://geology.com/state-map/maps/minnesota-county-map.gif">
+  <footer>
+    Powered by GitHub
+  </footer>
 </body>
 
 </html>
