--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ Melissa's Practice
   <header>
   <h1>Melissa Dangaran</h1>
   </header>
+  <main>
   <button>Click here</button>
 
   <p>Melissa is a WebMD</p>
@@ -28,8 +29,10 @@ Melissa's Practice
     <li>JS</li>
 
   </ul>
+    
   
   <img src="http://geology.com/state-map/maps/minnesota-county-map.gif">
+  </main>
   <footer>
     Powered by GitHub
   </footer>
