--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Melissa's Practice
 
   </ul>
     <article>
-      <h3>HTML / CSS WOrkshop</h3>
+      <h3>HTML / CSS Workshop</h3>
       <section>Learn about HTML and CSS.</section>
     </article>
     
