--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Melissa's Practice
     </article>
     
   
-  <img src="https://primeacademy.io/">
+  <img src="https://course_report_production.s3.amazonaws.com/rich/rich_files/rich_files/450/s300/prime-20logo-20color.png">
   </main>
   <footer>
     Powered by GitHub
