--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-
+  
 <html>
 
 <head>
 
-Melissa's Practice
-
+  <title>Melissa's Practice</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 
 <body>
