--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-  
 <html>
 
 <head>
@@ -35,7 +34,7 @@
     </article>
     
   
-  <img src="https://course_report_production.s3.amazonaws.com/rich/rich_files/rich_files/450/s300/prime-20logo-20color.png">
+  <img class="logo" src="https://course_report_production.s3.amazonaws.com/rich/rich_files/rich_files/450/s300/prime-20logo-20color.png">
   </main>
   <footer>
     Powered by GitHub
