inserted map image

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <html>
 
 <head>
@@ -9,6 +10,7 @@
 <body>
   <header>
   <h1>Melissa Dangaran</h1>
+  <img class="map" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/Minnesota_population_map_cropped.png/220px-Minnesota_population_map_cropped.png">
   </header>
   <main>
   <button>Click here</button>
